--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/unity
 # Edit at https://www.toptal.com/developers/gitignore?templates=unity
 
+Build.zip
+
 ### Unity ###
 # This .gitignore file should be placed at the root of your Unity project directory
 #
